# sysdo

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml  flake.nix  justfile  treefmt.nix
src/: main.rs  run.rs  settings.rs  sysdo.rs
src/sysdo/: setup.rs  status.rs  switch.rs
