[package]
name = "sysdo"
description = "Utility for working with my NixOS system"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/adam-gaia/sysdo"
repository = "https://github.com/adam-gaia/sysdo"


[dependencies]
clap = { version = "4.5.9", features =  ["derive"] }
color-eyre = "0.6.3"
env_logger = "0.11.3"
log = "0.4.22"
directories = "5.0.1"
jiff = "0.1.4"
names = "0.14.0"
nixgen = "0.1.0"
